--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,36 +1,37 @@
 // Defining the variables for reuse
 $font-family: "muli", sans-serif;
-$main-bg-color: #f7f8fc;
+// $main-bg-color: #f7f8fc;
+$main-bg-color: pink;
 $sidebar-bg-color: #363740;
 $highlight-bg-color: #9fa2b419;
 $light-gray: #A4A6B3;
 $blue-color: #3751FF;
 $light-blue: #dfe0eb27;
 $sidebar-item-color: #DDE2FF;
+$padding-header: 35px;
+$gap-icons: 20px;
+
+// fonts
+$font-h1: 24px;
+$font-h2: 19px;
+$font-h3: 16px;
+$font-h4: 14px;
+$font-h5: 12px;
 
 // Main body
-.main {
+main {
+  width: 100vw;
+  // I added 100vh because i can see when im working on it
+  height: 100vh;
   font-family: $font-family;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  width: 100%;
   background-color: $main-bg-color;
-}
-
-// Main div (container sidebar)
-.div {
-  // background-color: var(--sidebar-bg);
-  width: 100%;
-  height: 100vh;
-  position: relative;
 }
 
 // Sidebar
 .sidebar-desktop {
-  position: absolute;
   width: 255px;
-  height: 100%;
+  height: 100vh;
   background-color: $sidebar-bg-color;
 }
 
@@ -42,29 +43,13 @@ $sidebar-item-color: #DDE2FF;
   top: 37px;
   left: 32px;
 
-  #circle {
-    position: absolute;
-    border-radius: 50%;
-    width: 32px;
-    height: 32px;
-    background: $blue-color;
-  }
-
-  #D {
-    position: absolute;
-    width: 12px;
-    height: 14px;
-    left: 30%;
-    top: 27%;
-    background: linear-gradient(to right, rgba(255, 255, 255, 0.659), rgb(255, 255, 255));
-  }
 }
 
 // Title
 .title_D {
   font-weight: 700;
   font-style: bold;
-  font-size: 19px;
+  font-size: $font-h2;
   color: $light-gray;
   position: absolute;
   top: 40px;
@@ -75,13 +60,14 @@ $sidebar-item-color: #DDE2FF;
 .sidebar-list {
   font-weight: 400;
   font-style: normal;
-  font-size: 16px;
+  font-size: $font-h3;
   color: $sidebar-item-color;
   width: 100%;
   list-style-type: none;
   padding: 0;
   margin-top: 200px;
 
+  // list sidebar
   li {
     display: flex;
     align-items: center;
@@ -101,63 +87,66 @@ $sidebar-item-color: #DDE2FF;
       margin-right: 20px;
     }
   }
+
+  // Line separation list sidebar
+  #div_R {
+    background-color: $light-blue;
+    width: 100%;
+    height: 1px;
+    margin-top: 22px;
+    margin-bottom: 22px;
+  }
 }
 
-// Right section
-#div_R {
-  background-color: $light-blue;
+
+
+// main page excluding sidebar
+.main-page {
+  // calc page without the sidebar size
   width: 100%;
-  height: 1px;
-  margin-top: 22px;
-  margin-bottom: 22px;
-}
+  height: 100vh;
+  background-color: $main-bg-color;
+  display: flex;
 
-// Search
-.overlap {
-  position: absolute;
-  width: 1185;
-  left: 255px;
-}
 
-.header-default {
-  position: absolute;
-  top: 30px;
-  left: 30px;
-}
+  // Sub Header main page
+  .header-default {
+    // header - sidebar size
+    width: calc(100% - 255px);
+    position: fixed;
+    padding: $padding-header;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  
+  // overview title
+  .title_1 {
+    font-weight: 700;
+    font-size: $font-h1;
+    color: #252733;
+  }
 
-.title_1 {
-  font-weight: 700;
-  font-size: 24px;
-  color: #252733;
-}
+  // second part of subheaer, icons and profile
+  .subheader-icons {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: $gap-icons;
 
-#icon-search {
-  top: 14px;
-  left: 1060px;
-  position: absolute;
-  width: 16px;
-  height: 16px;
-}
+    // profile part
+    .photo {
+      width: 40px;
+      height: 40px;
+    }
+    .name {
+      font-size: $font-h4;
+    }
+  }
 
-.vector {
-  position: absolute;
-  width: 14px;
-  height: 16px;
-  top: 14px;
-  left: 1100px;
-}
 
-.name {
-  position: absolute;
-  top: 12px;
-  left: 1230px;
-  font-size: 14px;
-  width: 105px;
-}
 
-.photo {
-  position: absolute;
-  width: 40px;
-  top: 0;
-  left: 1350px;
+
+
 }
