--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -35,16 +35,6 @@ main {
   background-color: $sidebar-bg-color;
 }
 
-// Logo
-.logo {
-  position: absolute;
-  width: 32px;
-  height: 32px;
-  top: 37px;
-  left: 32px;
-
-}
-
 // Title
 .title_D {
   font-weight: 700;
@@ -145,6 +135,8 @@ main {
     }
   }
 
+  // Section cards
+  
 
 
 
