--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,12 +4,15 @@ $font-family: "muli", sans-serif;
 $main-bg-color: pink;
 $sidebar-bg-color: #363740;
 $highlight-bg-color: #9fa2b419;
+$superlight-gray: #9fa2b4;
 $light-gray: #A4A6B3;
 $blue-color: #3751FF;
 $light-blue: #dfe0eb27;
+$superdark-blue: #252733;
 $sidebar-item-color: #DDE2FF;
 $padding-header: 35px;
 $gap-icons: 20px;
+$font-weight-bold: 700;
 
 // fonts
 $font-h1: 24px;
@@ -110,12 +113,12 @@ main {
     flex-direction: row;
     justify-content: space-between;
   }
-  
+
   // overview title
   .title_1 {
     font-weight: 700;
     font-size: $font-h1;
-    color: #252733;
+    color: $superdark-blue;
   }
 
   // second part of subheaer, icons and profile
@@ -130,13 +133,43 @@ main {
       width: 40px;
       height: 40px;
     }
+
     .name {
       font-size: $font-h4;
     }
   }
 
   // Section cards
-  
+  .row {
+    display: flex;
+    padding: 120px $padding-header;
+    width: 100%;
+
+    // each card
+    .card-body {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      justify-content: center;
+
+      .card-title {
+        font-size: $font-h2;
+        color: $superlight-gray;
+        font-weight: $font-weight-bold;
+      }
+
+      .card-text {
+        font-size: 40px;
+        color: $superdark-blue;
+        font-weight: $font-weight-bold;
+      }
+
+      // hover active colour inside card
+      .active-hover {
+        color: $blue-color;
+      }
+    }
+  }
 
 
 
