--- a/Public/assets/css/style.css
+++ b/Public/assets/css/style.css
@@ -3,7 +3,7 @@ main {
   height: 100vh;
   font-family: "muli", sans-serif;
   display: flex;
-  background-color: pink;
+  background-color: #f7f8fc;
 }
 
 .sidebar-desktop {
@@ -17,37 +17,45 @@ main {
   font-style: bold;
   font-size: 19px;
   color: #A4A6B3;
-  position: absolute;
-  top: 40px;
-  left: 76px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  padding: 35px 0;
+  gap: 10px;
 }
 
 .sidebar-list {
   font-weight: 400;
   font-style: normal;
   font-size: 16px;
-  color: #DDE2FF;
   width: 100%;
   list-style-type: none;
   padding: 0;
-  margin-top: 200px;
 }
 .sidebar-list li {
   display: flex;
   align-items: center;
   padding: 10px;
-  width: 255px;
-  height: 56px;
-  left: 72px;
-  top: 128px;
-}
-.sidebar-list li #active {
-  background: rgba(159, 162, 180, 0.0980392157);
 }
 .sidebar-list li .li_img {
   width: 16px;
   margin-left: 32px;
   margin-right: 20px;
+}
+.sidebar-list li:hover {
+  background-color: rgba(159, 162, 180, 0.08);
+  border-left: 3px solid #DDE2FF;
+  color: #DDE2FF !important;
+}
+.sidebar-list li:hover .li_img {
+  color: #DDE2FF;
+}
+.sidebar-list li svg {
+  transition: fill 0.1s ease;
+}
+.sidebar-list li:hover path {
+  fill: #dde2ff !important;
 }
 .sidebar-list #div_R {
   background-color: rgba(223, 224, 235, 0.1529411765);
@@ -60,8 +68,9 @@ main {
 .main-page {
   width: 100%;
   height: 100vh;
-  background-color: pink;
+  background-color: #f7f8fc;
   display: flex;
+  flex-direction: column;
 }
 .main-page .header-default {
   width: calc(100% - 255px);
@@ -95,23 +104,31 @@ main {
   padding: 120px 35px;
   width: 100%;
 }
-.main-page .row .card-body {
+.main-page .row .card {
+  transition: all 0.2s ease;
+  border-radius: 8px;
+}
+.main-page .row .card:hover {
+  border: 2px solid #3751FF;
+}
+.main-page .row .card .card-body {
   display: flex;
   align-items: center;
   flex-direction: column;
   justify-content: center;
+  transition: color 0.3s ease;
 }
-.main-page .row .card-body .card-title {
+.main-page .row .card .card-body .card-title {
   font-size: 19px;
   color: #9fa2b4;
   font-weight: 700;
 }
-.main-page .row .card-body .card-text {
+.main-page .row .card .card-body .card-text {
   font-size: 40px;
   color: #252733;
   font-weight: 700;
 }
-.main-page .row .card-body .active-hover {
+.main-page .row .card .card-body:hover .card-title, .main-page .row .card .card-body:hover .card-text {
   color: #3751FF;
 }
 
