--- a/Public/assets/css/style.css
+++ b/Public/assets/css/style.css
@@ -1,6 +1,6 @@
 main {
   width: 100vw;
-  height: 100vh;
+  height: auto;
   font-family: "muli", sans-serif;
   display: flex;
   background-color: #f7f8fc;
@@ -9,6 +9,7 @@ main {
 .sidebar-desktop {
   width: 255px;
   height: 100vh;
+  position: fixed;
   background-color: #363740;
 }
 
@@ -37,6 +38,8 @@ main {
   display: flex;
   align-items: center;
   padding: 10px;
+  box-sizing: border-box;
+  border-left: 3px solid transparent;
 }
 .sidebar-list li .li_img {
   width: 16px;
@@ -57,25 +60,22 @@ main {
 .sidebar-list li:hover path {
   fill: #dde2ff !important;
 }
-.sidebar-list #div_R {
-  background-color: rgba(223, 224, 235, 0.1529411765);
-  width: 100%;
-  height: 1px;
-  margin-top: 22px;
-  margin-bottom: 22px;
-}
 
 .main-page {
   width: 100%;
-  height: 100vh;
+  height: auto;
   background-color: #f7f8fc;
   display: flex;
   flex-direction: column;
+  gap: 40px;
+  padding: 0 35px 140px 35px;
+  padding-left: 290px;
 }
 .main-page .header-default {
-  width: calc(100% - 255px);
+  width: calc(100% - 255px - 35px);
   position: fixed;
-  padding: 35px;
+  z-index: 999;
+  padding: 35px 35px 35px 0;
   display: flex;
   align-items: center;
   flex-direction: row;
@@ -101,8 +101,9 @@ main {
 }
 .main-page .row {
   display: flex;
-  padding: 120px 35px;
+  padding: 120px 0;
   width: 100%;
+  gap: 40px;
 }
 .main-page .row .card {
   transition: all 0.2s ease;
@@ -130,6 +131,70 @@ main {
 }
 .main-page .row .card .card-body:hover .card-title, .main-page .row .card .card-body:hover .card-text {
   color: #3751FF;
+}
+.main-page .tickets-tasks {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  gap: 40px;
+}
+.main-page .tickets-tasks .card {
+  padding: 35px;
+  border-radius: 8px;
+}
+.main-page .tickets-tasks .card .list-group {
+  border: none;
+}
+.main-page .tickets-tasks .card .list-group-item {
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  padding: 17.5px;
+}
+.main-page .tickets-tasks .card .card-body-title {
+  padding: 17.5px 17.5px 35px 17.5px;
+}
+.main-page .tickets-tasks .card .card-body-title h5 {
+  font-size: 12px;
+  color: #9fa2b4;
+  font-weight: 500;
+}
+.main-page .tickets-tasks .card .card-body-title h5 span {
+  color: rgba(37, 39, 51, 0.8);
+  font-weight: 600;
+}
+.main-page .tickets-tasks .card .card-body-title .card-body {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0;
+}
+.main-page .tickets-tasks .card .card-body-title .card-body h5 {
+  font-size: 19px;
+  color: #252733;
+  font-weight: 700;
+}
+.main-page .tickets-tasks .card .card-body-title .card-body p {
+  font-size: 14px;
+  color: #3751FF;
+}
+.main-page .tickets-tasks .card ul span {
+  font-size: 14px;
+  color: #9fa2b4;
+  background-color: transparent !important;
+  font-weight: unset;
+}
+.main-page .tickets-tasks .card ul li:hover {
+  color: #f7f8fc;
+  background-color: #3751FF !important;
+  font-weight: 700;
+  border-radius: 20px;
+  border: none;
+}
+.main-page .tickets-tasks .card ul li:hover span {
+  color: #f7f8fc;
+  background-color: #3751FF !important;
+  font-weight: 700;
 }
 
 /*# sourceMappingURL=style.css.map */
