--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,6 @@
 // Defining the variables for reuse
-$font-family: "muli", sans-serif;
+
+// colors
 $main-bg-color: #f7f8fc;
 $sidebar-bg-color: #363740;
 $superlight-gray: #9fa2b4;
@@ -8,22 +9,26 @@ $blue-color: #3751FF;
 $light-blue: #dfe0eb27;
 $superdark-blue: #252733;
 $sidebar-item-color: #DDE2FF;
-$padding-header: 35px;
-$gap-icons: 20px;
-$font-weight-bold: 700;
 
 // fonts
+$font-family: "muli", sans-serif;
 $font-h1: 24px;
 $font-h2: 19px;
 $font-h3: 16px;
 $font-h4: 14px;
 $font-h5: 12px;
+$font-weight-bold: 700;
+
+// padding & gap
+$padding-header: 35px;
+$gap-icons: 20px;
+
+
 
 // Main body
 main {
   width: 100vw;
-  // I added 100vh because i can see when im working on it
-  height: 100vh;
+  height: auto;
   font-family: $font-family;
   display: flex;
   background-color: $main-bg-color;
@@ -33,6 +38,7 @@ main {
 .sidebar-desktop {
   width: 255px;
   height: 100vh;
+  position: fixed;
   background-color: $sidebar-bg-color;
 }
 
@@ -64,6 +70,8 @@ main {
     display: flex;
     align-items: center;
     padding: 10px;
+    box-sizing: border-box;
+    border-left: 3px solid transparent;
 
     .li_img {
       width: 16px;
@@ -85,22 +93,15 @@ main {
 
     // hover on icon
     svg {
-    transition: fill 0.1s ease;
-    } 
+      transition: fill 0.1s ease;
+    }
+
     &:hover path {
       // I changed svg hover color but its not the same as the text, why (?)
       fill: rgba($sidebar-item-color, 1) !important;
     }
   }
 
-  // Line separation list sidebar
-  #div_R {
-    background-color: $light-blue;
-    width: 100%;
-    height: 1px;
-    margin-top: 22px;
-    margin-bottom: 22px;
-  }
 }
 
 
@@ -109,93 +110,186 @@ main {
 .main-page {
   // calc page without the sidebar size
   width: 100%;
-  height: 100vh;
+  height: auto;
   background-color: $main-bg-color;
   display: flex;
   flex-direction: column;
+  gap: calc($gap-icons * 2);
+  padding: 0 $padding-header (
+    $padding-header * 4) $padding-header;
+  padding-left: calc(255px + $padding-header
+  );
 
 
-  // Sub Header main page
-  .header-default {
-    // header - sidebar size
-    width: calc(100% - 255px);
-    position: fixed;
+// Sub Header main page
+.header-default {
+  // header - sidebar size
+  width: calc(100% - 255px - $padding-header);
+  position: fixed;
+  z-index: 999;
+  padding: $padding-header $padding-header $padding-header 0;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+// overview title
+.title_1 {
+  font-weight: 700;
+  font-size: $font-h1;
+  color: $superdark-blue;
+}
+
+// second part of subheaer, icons and profile
+.subheader-icons {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: $gap-icons;
+
+  // profile part
+  .photo {
+    width: 40px;
+    height: 40px;
+  }
+
+  .name {
+    font-size: $font-h4;
+  }
+}
+
+// Section cards
+.row {
+  display: flex;
+  padding: 120px 0;
+  width: 100%;
+  gap: calc($gap-icons * 2);
+
+  // Each card
+  .card {
+    transition: all 0.2s ease; // Smooth transition for hover effect
+    border-radius: 8px; // Optional: Add border radius if needed
+
+    &:hover {
+      border: 2px solid $blue-color; // Change border color on hover
+    }
+
+    .card-body {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      justify-content: center;
+      transition: color 0.3s ease; // Smooth text color transition for the card body
+
+      .card-title {
+        font-size: $font-h2;
+        color: $superlight-gray;
+        font-weight: $font-weight-bold;
+      }
+
+      .card-text {
+        font-size: 40px;
+        color: $superdark-blue;
+        font-weight: $font-weight-bold;
+      }
+
+      // Hover effect for text color inside the card body
+      &:hover .card-title,
+      &:hover .card-text {
+        color: $blue-color; // Change the text color when the card is hovered
+      }
+    }
+  }
+}
+
+
+// Section Today's trend graphic
+
+
+// Section Tickets & Tasks
+.tickets-tasks {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  gap: calc($gap-icons * 2);
+
+
+  // Section Unresolved Tickets
+  .card {
     padding: $padding-header;
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    justify-content: space-between;
-  }
+    border-radius: 8px;
 
-  // overview title
-  .title_1 {
-    font-weight: 700;
-    font-size: $font-h1;
-    color: $superdark-blue;
-  }
-
-  // second part of subheaer, icons and profile
-  .subheader-icons {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: $gap-icons;
-
-    // profile part
-    .photo {
-      width: 40px;
-      height: 40px;
+    .list-group {
+      border: none;
     }
 
-    .name {
+    .list-group-item {
+      border-top: none;
+      border-left: none;
+      border-right: none;
+      padding: calc($padding-header / 2);
+    }
+
+    .card-body-title {
+      padding: ($padding-header / 2) ($padding-header / 2) $padding-header (
+        $padding-header / 2
+      );
+
+    h5 {
+      font-size: $font-h5;
+      color: $superlight-gray;
+      font-weight: 500;
+
+      span {
+        color: rgba($superdark-blue, 0.8);
+        font-weight: 600;
+      }
+    }
+
+    .card-body {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0;
+
+      h5 {
+        font-size: $font-h2;
+        color: $superdark-blue;
+        font-weight: $font-weight-bold;
+      }
+
+      p {
+        font-size: $font-h4;
+        color: $blue-color;
+      }
+    }
+  }
+
+  // List unresolved tickets
+  ul {
+    // left side numbers defining pattern
+    span {
       font-size: $font-h4;
+      color: $superlight-gray;
+      background-color: transparent !important;
+      font-weight: unset;
     }
-  }
+    // when hovering text list
+    li:hover {
+      color: $main-bg-color;
+      background-color: $blue-color !important;
+      font-weight: 700;
+      border-radius: 20px;
+      border: none;
 
-  // Section cards
-  .row {
-    display: flex;
-    padding: 120px $padding-header;
-    width: 100%;
-  
-    // Each card
-    .card {
-      transition: all 0.2s ease; // Smooth transition for hover effect
-      border-radius: 8px; // Optional: Add border radius if needed
-  
-      &:hover {
-        border: 2px solid $blue-color; // Change border color on hover
-      }
-  
-      .card-body {
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        justify-content: center;
-        transition: color 0.3s ease; // Smooth text color transition for the card body
-        
-        .card-title {
-          font-size: $font-h2;
-          color: $superlight-gray;
-          font-weight: $font-weight-bold;
-        }
-  
-        .card-text {
-          font-size: 40px;
-          color: $superdark-blue;
-          font-weight: $font-weight-bold;
-        }
-  
-        // Hover effect for text color inside the card body
-        &:hover .card-title,
-        &:hover .card-text {
-          color: $blue-color; // Change the text color when the card is hovered
-        }
+      span {
+        color: $main-bg-color;
+        background-color: $blue-color !important;
+        font-weight: 700;
       }
     }
   }
-
-
-
-
+}
+}
 }
