--- a/Public/assets/css/style.css
+++ b/Public/assets/css/style.css
@@ -132,6 +132,89 @@ main {
 .main-page .row .card .card-body:hover .card-title, .main-page .row .card .card-body:hover .card-text {
   color: #3751FF;
 }
+.main-page .graphic-container .row {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  gap: 0;
+  padding: 35px;
+  padding-right: 0;
+  margin: 0;
+}
+.main-page .graphic-container .row .graphic-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: end;
+  padding-bottom: 35px;
+}
+.main-page .graphic-container .row .graphic-content .title-graphic {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.main-page .graphic-container .row .graphic-content .title-graphic h5 {
+  font-size: 19px;
+  font-weight: 700;
+  color: #252733;
+  margin: 0;
+}
+.main-page .graphic-container .row .graphic-content .title-graphic .text-muted {
+  font-size: 12px;
+  color: #9fa2b4;
+  margin: 0;
+}
+.main-page .graphic-container .row .graphic-content .legend-graphic {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+.main-page .graphic-container .row .graphic-content .legend-graphic .legend-graphic-sub {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+.main-page .graphic-container .row .graphic-content .legend-graphic .legend-graphic-sub p {
+  display: flex;
+  font-size: 12px;
+  color: #9fa2b4;
+  letter-spacing: 0.1px;
+  margin: 0;
+}
+.main-page .graphic-container .row .graphic-data {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+}
+.main-page .graphic-container .row .graphic-data .row {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 17.5px 0;
+}
+.main-page .graphic-container .row .graphic-data .row .text-muted {
+  font-size: 16px;
+  color: #9fa2b4 !important;
+  letter-spacing: 0.3px;
+  display: flex;
+  justify-content: center !important;
+}
+.main-page .graphic-container .row .graphic-data .row .text-end {
+  font-size: 24px;
+  font-weight: 700;
+  color: #252733;
+  display: flex;
+  justify-content: center !important;
+}
+.main-page .graphic-container .row .graphic-data .padding-zero-top {
+  padding-top: 0 !important;
+}
+.main-page .graphic-container .row .graphic-data .padding-zero-bottom {
+  padding-bottom: 0 !important;
+}
 .main-page .tickets-tasks {
   width: 100%;
   display: flex;
