--- a/Public/assets/css/style.css
+++ b/Public/assets/css/style.css
@@ -22,7 +22,7 @@ main {
   align-items: center;
   justify-content: center;
   width: 100%;
-  padding: 35px 0;
+  padding: 35px 0 52.5px 0;
   gap: 10px;
 }
 
@@ -37,7 +37,7 @@ main {
 .sidebar-list li {
   display: flex;
   align-items: center;
-  padding: 10px;
+  padding: 17.5px;
   box-sizing: border-box;
   border-left: 3px solid transparent;
 }
@@ -164,6 +164,9 @@ main {
   color: #252733;
   margin: 0;
 }
+.main-page .graphic-container .row .graphic-content .title-graphic h5:hover {
+  color: #3751FF !important;
+}
 .main-page .graphic-container .row .graphic-content .title-graphic .text-muted {
   font-size: 12px;
   color: #9fa2b4;
@@ -185,6 +188,9 @@ main {
   color: #9fa2b4;
   letter-spacing: 0.1px;
   margin: 0;
+}
+.main-page .graphic-container .row .graphic-content .legend-graphic .legend-graphic-sub p:hover {
+  color: #3751FF !important;
 }
 .main-page .graphic-container .row .graphic-data {
   display: flex;
@@ -214,6 +220,9 @@ main {
   display: flex;
   justify-content: center !important;
 }
+.main-page .graphic-container .row .graphic-data .row:hover .text-muted, .main-page .graphic-container .row .graphic-data .row:hover .text-end {
+  color: #3751FF !important;
+}
 .main-page .graphic-container .row .graphic-data .padding-zero-top {
   padding-top: 0 !important;
 }
@@ -239,6 +248,15 @@ main {
   border-right: none;
   padding: 17.5px;
 }
+.main-page .tickets-tasks .card-ticket .list-group-item:hover span {
+  color: #3751FF !important;
+}
+.main-page .tickets-tasks .card-ticket .list-group-item:hover svg rect {
+  fill: #3751FF !important;
+}
+.main-page .tickets-tasks .card-ticket .list-group-item:hover svg path {
+  stroke: white;
+}
 .main-page .tickets-tasks .card-ticket .card-body-title {
   padding: 17.5px 17.5px 35px 17.5px;
 }
@@ -246,6 +264,9 @@ main {
   font-size: 12px;
   color: #9fa2b4;
   font-weight: 500;
+}
+.main-page .tickets-tasks .card-ticket .card-body-title h5:hover {
+  color: #3751FF !important;
 }
 .main-page .tickets-tasks .card-ticket .card-body-title h5 span {
   color: rgba(37, 39, 51, 0.8);
@@ -265,6 +286,12 @@ main {
 .main-page .tickets-tasks .card-ticket .card-body-title .card-body p {
   font-size: 14px;
   color: #3751FF;
+  padding: 7px 12px;
+  border-radius: 50px;
+}
+.main-page .tickets-tasks .card-ticket .card-body-title .card-body p:hover {
+  color: white;
+  background-color: #3751FF;
 }
 .main-page .tickets-tasks .card-ticket ul li {
   font-size: 14px;
@@ -292,6 +319,11 @@ main {
   gap: 20px;
   align-items: center;
 }
+.main-page .tickets-tasks .card-task ul li .task-input .form-check-input {
+  width: 20px;
+  height: 20px;
+  border-radius: 50px;
+}
 .main-page .tickets-tasks .card-task ul li .rounded-pill {
   text-transform: uppercase;
   font-weight: 700;
@@ -307,12 +339,33 @@ main {
   background-color: transparent !important;
   font-weight: initial;
   border-radius: initial;
-  border: initial !important;
+  border-bottom: 1px solid #dfe0eb;
 }
 .main-page .tickets-tasks .card-task ul li:hover span {
   color: initial;
   background-color: transparent !important;
   font-weight: initial;
+}
+.main-page .tickets-tasks .card-task ul li #hover-roundedbutton-1 {
+  transition: background-color 0.3s ease;
+}
+.main-page .tickets-tasks .card-task ul li #hover-roundedbutton-1:hover {
+  background-color: rgb(255, 214.0118110236, 75.5) !important;
+  color: #252733 !important;
+}
+.main-page .tickets-tasks .card-task ul li #hover-roundedbutton-2 {
+  transition: background-color 0.3s ease;
+}
+.main-page .tickets-tasks .card-task ul li #hover-roundedbutton-2:hover {
+  background-color: rgb(98.0448979592, 223.4551020408, 182.6775510204) !important;
+  color: #252733 !important;
+}
+.main-page .tickets-tasks .card-task ul li #hover-roundedbutton-3 {
+  transition: background-color 0.3s ease;
+}
+.main-page .tickets-tasks .card-task ul li #hover-roundedbutton-3:hover {
+  background-color: rgb(232.25, 232.25, 232.25) !important;
+  color: #252733 !important;
 }
 
 @media (max-width: 1450px) {
