--- a/Public/assets/css/style.css
+++ b/Public/assets/css/style.css
@@ -392,5 +392,71 @@ main {
     height: auto;
   }
 }
+@media (max-width: 600px) {
+  .sidebar-desktop {
+    display: none;
+  }
+  .main-page {
+    width: 100%;
+    height: 100%;
+    padding-left: 35px;
+    padding-right: 35px;
+  }
+  .header-default {
+    width: 100%;
+    padding: 35px;
+    gap: 200px;
+  }
+  .row {
+    height: auto;
+  }
+  .graphic-container .row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .col-md-4 {
+    width: 100%;
+  }
+  .graphic-image {
+    width: 100%;
+    height: auto;
+    margin-bottom: 50px;
+  }
+}
+@media (max-width: 600px) {
+  .sidebar-desktop {
+    display: none;
+  }
+  .main-page {
+    width: 100%;
+    height: 100%;
+    padding-left: 35px;
+    padding-right: 35px;
+  }
+  .header-default {
+    width: 100%;
+    padding: 35px;
+    gap: 200px;
+  }
+  .row {
+    height: auto;
+  }
+  .graphic-container .row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .col-md-4 {
+    width: 100%;
+  }
+  .graphic-image {
+    width: 100%;
+    height: auto;
+    margin-bottom: 50px;
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
