--- a/Public/assets/css/style.css
+++ b/Public/assets/css/style.css
@@ -424,38 +424,12 @@ main {
     height: auto;
     margin-bottom: 50px;
   }
-}
-@media (max-width: 600px) {
-  .sidebar-desktop {
-    display: none;
+  .main-page .tickets-tasks {
+    flex-direction: column;
   }
-  .main-page {
-    width: 100%;
-    height: 100%;
-    padding-left: 35px;
-    padding-right: 35px;
-  }
-  .header-default {
-    width: 100%;
-    padding: 35px;
-    gap: 200px;
-  }
-  .row {
-    height: auto;
-  }
-  .graphic-container .row {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-  .col-md-4 {
-    width: 100%;
-  }
-  .graphic-image {
-    width: 100%;
-    height: auto;
-    margin-bottom: 50px;
+  .card.card-ticket {
+    width: 100% !important;
+    max-width: 100% !important;
   }
 }
 
