--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -574,28 +574,53 @@ main {
 
 // Responsive Styles
 @media (max-width: 600px) {
-  
+
   .sidebar-desktop {
     display: none;
   }
-
+  .title_1 {
+    font-size: 20px !important;
+  }
+  .title_D {
+    font-size: 18px !important;
+  }
+  .card-title {
+    font-size: 8px !important;
+  }
+  .text-muted {
+    font-size: 10px !important;
+  }
+  .main-page .row .col-3 .card .card-body .card-text{
+    font-size: 30px !important;
+  }
+  .text-end{
+    font-size: 20px !important;
+  }
   .main-page {
     width: 100%;
     height: 100%;
     padding-left: $padding-header;
     padding-right: $padding-header;
   }
-
+  .row{
+    width: auto;
+  }
   .header-default {
-    width: 100%;
-    padding: $padding-header;
-    gap: 200px;
+    gap: 40px;
+  }  
+  .subheader-icons{
+    gap: 10px !important;
   }
-  
-  .row {
-    height: auto;
+  .name {
+    font-size: 10px !important;
+  }
+  .main-page .graphic-container .row{
+    padding: 25px;
   }
 
+  p{
+    font-size: 10px !important;
+  }
   .graphic-container .row {
     display: flex;
     flex-direction: row;
@@ -606,13 +631,18 @@ main {
   .col-md-4 {
    width: 100%;
   }
-
+  .card-body{
+    padding: 7px 5px  0 !important;
+  }
   .graphic-image {
     width: 100%;
     height: auto;
     margin-bottom: 50px;
   }
-  
+  .legend-graphic {
+    flex-direction: column;
+    margin-left: 20px;
+  }
   .main-page .tickets-tasks {
     flex-direction: column;
   }
