--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -369,11 +369,11 @@ main {
 
 
       // Hover effect on the create new task list item
-      &:hover {
-        span {
-          color: $blue-color !important;
-        }
-      }
+      // &:hover {
+      //   span {
+      //     // color: $blue-color !important;
+      //   }
+      // }
 
       // hover on svg
       &:hover {
@@ -584,7 +584,7 @@ main {
   .title_D {
     font-size: 18px !important;
   }
-  .card-title {
+  .main-page .row .col-3 .card .card-body .card-title {
     font-size: 8px !important;
   }
   .text-muted {
@@ -606,7 +606,7 @@ main {
     width: auto;
   }
   .header-default {
-    gap: 40px;
+    width: 95% !important;
   }  
   .subheader-icons{
     gap: 10px !important;
@@ -630,6 +630,10 @@ main {
 
   .col-md-4 {
    width: 100%;
+  }
+  .col-md-8{
+    border: none !important	;
+    padding: 0 !important;
   }
   .card-body{
     padding: 7px 5px  0 !important;
